# ootd

./: .babelrc  .eslintrc.json  .gitignore  README.md  build.sh  data.json  db.sqlite3  dev.sh  package-lock.json  package.json  pyproject.toml  webpack.config.js  webpack.development.js  webpack.production.js
closet/: admin.py  models.py  serializers.py  urls.py  views.py
closet/migrations/: 0001_initial.py  0002_auto_20221121_1456.py  0003_fashionista.py  0004_alter_fashionista_bio.py  0005_alter_fashionista_bio.py  0006_auto_20221122_1549.py  0007_rename_garment_name_garment_name.py  0008_alter_garment_purchase_price.py  0009_garment_tags.py  0010_rename_scan_date_garmentwear_date.py  0011_rename_scan_date_outfitwear_date.py  0012_alter_outfitwear_date.py  0013_alter_garmentwear_date.py
closet/templates/closet/: garment.html.djt  garment_confirm_delete.html  garment_form.html  garment_update_form.html  wardrobe.html.djt
closet/templates/registration/: login.html
frontend/: package-lock.json  package.json  urls.py  views.py
frontend/src/: App.css  App.js  App.jsx  axiosApi.js  axiosApi.jsx  index.css  index.jsx  ootdApi.jsx  reset.css  roboflowApi.jsx
frontend/src/components/: Auth.jsx  Card.css  Card.jsx  DataTable.css  DataTable.jsx  DateSelector.js  DateSelector.jsx  EditRow.css  Field.css  FilterBar.js  FilterBar.jsx  FilterCheckBox.jsx  Footer.jsx  GarmentSelector.jsx  GarmentWear.jsx  Graph.jsx  Header.css  Header.js  Header.jsx  HistogramPlot.jsx  Home.js  Login.jsx  Stack.css  Stack.jsx  ViolinPlot.jsx  (+4 more)
ootd/: asgi.py  settings.py  urls.py  wsgi.py
(+40 files in other folders)
