[tool.poetry]
name = "ootd"
version = "0.1.0"
description = ""
authors = ["Josef Taylor <josef.taylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = { version = "^4.1.3", python = "<empty>" }
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
markdown = "^3.4.1"
django-filter = "^22.1"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.5"}
djangorestframework-simplejwt = "^5.2.2"
psycopg2 = "^2.9.5"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
