[tool.poetry]
name = "ootd"
version = "0.1.0"
description = ""
authors = ["Josef Taylor <josef.taylor@gmail.com>"]
readme = "README.md"
packages = [{include = "ootd"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.5"}
django-cors-headers = "^3.13.0"
markdown = "^3.4.1"
django-filter = "^22.1"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
dj-database-url = "^1.2.0"
django-taggit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
